--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,4 +29,18 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textAlignment="center" />
+
+    <TextView
+        android:text="SecondParagraph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="59dp"
+        android:id="@+id/textView4"
+        tools:text="Hello2"
+        android:contentDescription="SecondParagraph"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textAlignment="center" />
 </RelativeLayout>
