--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -87,19 +87,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:id="@+id/textView7"
-        android:textColor="@android:color/holo_red_dark"
-        android:contentDescription="TimeofDay"
-        android:textSize="36sp"
-        android:textAlignment="center" />
-
     <Button
         android:text="Button"
         android:layout_width="wrap_content"
@@ -118,5 +105,19 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/button3"
         android:textSize="18sp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textColor="@android:color/holo_red_dark"
+        android:contentDescription="TimeofDay"
+        android:textSize="36sp"
+        android:textAlignment="center"
+        android:layout_marginTop="88dp"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
