--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,17 +13,6 @@
     tools:context="com.hackholyoke.skpatel.newlyfe.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:text="Tasks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/button"
-        tools:text="Tasks"
-        android:textSize="18sp" />
-
     <TextView
         android:text="To A"
         android:layout_width="match_parent"
@@ -87,25 +76,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/button2"
-        android:textSize="18sp" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/button3"
-        android:textSize="18sp" />
-
     <TextView
         android:text="TextView"
         android:layout_width="match_parent"
@@ -119,5 +89,50 @@
         android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:text="Tasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/button"
+            tools:text="Tasks"
+            android:textSize="18sp"
+            android:layout_weight="1" />
+
+        <Button
+            android:text="Quotes/Vids"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/button2"
+            android:textSize="18sp"
+            android:elevation="0dp"
+            android:contentDescription="Quotes and Vids"
+            android:layout_weight="1" />
+
+        <Button
+            android:text="Evaluate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/button3"
+            android:textSize="18sp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </RelativeLayout>
