--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -100,11 +100,11 @@
             android:layout_alignParentStart="true" />
 
         <TextView
-            android:text="To A"
+            android:text="To"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="42dp"
-            android:id="@+id/To A"
+            android:id="@+id/To"
             tools:text="To A"
             android:contentDescription="Three"
             android:textColor="@android:color/white"
@@ -125,7 +125,7 @@
             android:contentDescription="Four"
             android:textSize="30sp"
             android:textAlignment="center"
-            android:layout_below="@+id/To A"
+            android:layout_below="@+id/ToA"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
