--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/button"
+            android:id="@+id/btnTasks"
             tools:text="Tasks"
             android:textSize="18sp"
             android:layout_weight="1" />
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/button2"
+            android:id="@+id/btnQuotes"
             android:textSize="18sp"
             android:elevation="0dp"
             android:contentDescription="Quotes and Vids"
@@ -52,7 +52,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:id="@+id/button3"
+            android:id="@+id/btnEvaluation"
             android:textSize="18sp"
             android:layout_weight="1" />
 
