--- a/app/src/main/res/layout/content_intro.xml
+++ b/app/src/main/res/layout/content_intro.xml
@@ -10,8 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hackholyoke.skpatel.newlyfe.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.hackholyoke.skpatel.newlyfe.IntroActivity"
+    tools:showIn="@layout/activity_intro">
 
     <LinearLayout
         android:orientation="horizontal"
