--- a/app/src/main/res/layout/content_intro.xml
+++ b/app/src/main/res/layout/content_intro.xml
@@ -62,9 +62,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/Step"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp">
+        android:layout_above="@+id/textView8"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="6dp">
 
         <TextView
             android:text="First"
@@ -121,7 +122,10 @@
             android:id="@+id/textView8"
             android:textColor="@android:color/white"
             android:textSize="30sp"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:text="Successful"
@@ -140,17 +144,19 @@
 
         <TextView
             android:text="TextView"
-            android:layout_width="match_parent"
+            android:layout_width="385dp"
             android:layout_height="wrap_content"
             android:id="@+id/VariableTextView"
             android:textColor="@android:color/holo_red_dark"
             android:contentDescription="TimeofDay"
             android:textSize="36sp"
             android:textAlignment="center"
-            android:layout_marginTop="88dp"
-            android:layout_below="@+id/Successful"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_above="@+id/linearLayout3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="140dp"
+            android:layout_marginEnd="140dp"
+            android:layout_marginBottom="70dp" />
 
     </LinearLayout>
 
