--- a/app/src/main/res/layout/activity_goals.xml
+++ b/app/src/main/res/layout/activity_goals.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hackholyoke.skpatel.newlyfe.SecondScreen">
+    tools:context="com.hackholyoke.skpatel.newlyfe.GoalsScreen">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_second_screen" />
+    <include layout="@layout/content_goals" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
