--- a/app/src/main/res/layout/content_intro.xml
+++ b/app/src/main/res/layout/content_intro.xml
@@ -22,15 +22,15 @@
         android:layout_alignParentStart="true">
 
         <Button
-            android:text="Tasks"
+            android:text="Goals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:id="@+id/btnTasks"
-            tools:text="Tasks"
-            android:textSize="18sp"
+            tools:text="Goals"
+            android:textSize="14sp"
             android:layout_weight="1" />
 
         <Button
@@ -40,7 +40,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:id="@+id/btnQuotes"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:elevation="0dp"
             android:contentDescription="Quotes and Vids"
             android:layout_weight="1" />
@@ -53,7 +53,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:id="@+id/btnEvaluation"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:layout_weight="1" />
 
     </LinearLayout>
@@ -62,10 +62,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/textView8"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="6dp">
+        android:layout_alignParentBottom="true">
 
         <TextView
             android:text="First"
@@ -144,7 +143,7 @@
 
         <TextView
             android:text="TextView"
-            android:layout_width="385dp"
+            android:layout_width="387dp"
             android:layout_height="wrap_content"
             android:id="@+id/VariableTextView"
             android:textColor="@android:color/holo_red_dark"
