--- a/app/src/main/res/layout/content_choice.xml
+++ b/app/src/main/res/layout/content_choice.xml
@@ -13,4 +13,15 @@
     tools:context="com.hackholyoke.skpatel.newlyfe.ChoiceActivity"
     tools:showIn="@layout/activity_choice">
 
+    <TextView
+        android:text="selectedText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/selectedText"
+        android:textColor="@android:color/black"
+        tools:text="selectedText"
+        android:textSize="24sp"
+        android:textAlignment="center" />
 </RelativeLayout>
