--- a/app/src/main/res/layout/content_choice.xml
+++ b/app/src/main/res/layout/content_choice.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/selectedText"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/background_light"
         tools:text="selectedText"
         android:textSize="24sp"
         android:textAlignment="center" />
