--- a/app/src/main/res/layout/content_intro.xml
+++ b/app/src/main/res/layout/content_intro.xml
@@ -48,105 +48,93 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TextView
+        android:text="Step"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:id="@+id/Step"
+        tools:text="Step"
+        android:contentDescription="SecondParagraph"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textAlignment="center"
+        android:layout_below="@+id/First"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="To"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:id="@+id/To"
+        tools:text="To"
+        android:contentDescription="Three"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_below="@+id/Step"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="First"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/First"
+        tools:text="First"
+        android:contentDescription="First"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/white"
+        android:typeface="normal"
+        android:textSize="36sp"
+        android:textAllCaps="false"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true">
+        android:layout_marginTop="28dp" />
 
-        <TextView
-            android:text="First"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/First"
-            tools:text="First"
-            android:contentDescription="First"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@android:color/white"
-            android:typeface="normal"
-            android:textSize="36sp"
-            android:textAllCaps="false"
-            android:textAlignment="center"
-            android:layout_marginTop="69dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+    <TextView
+        android:text="Successful"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Successful"
+        android:textColor="@android:color/white"
+        tools:text="Successful"
+        android:contentDescription="Four"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-        <TextView
-            android:text="Step"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:id="@+id/Step"
-            tools:text="Step"
-            android:contentDescription="SecondParagraph"
-            android:textColor="@android:color/white"
-            android:textSize="36sp"
-            android:textAlignment="center"
-            android:layout_below="@+id/First"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+    <TextView
+        android:text="A"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_below="@+id/To"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="29dp" />
 
-        <TextView
-            android:text="To"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
-            android:id="@+id/To"
-            tools:text="To"
-            android:contentDescription="Three"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_below="@+id/Step"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="A"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="Successful"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="43dp"
-            android:id="@+id/Successful"
-            android:textColor="@android:color/white"
-            tools:text="Successful"
-            android:contentDescription="Four"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_below="@+id/ToA"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="TextView"
-            android:layout_width="387dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/VariableTextView"
-            android:textColor="@android:color/holo_red_dark"
-            android:contentDescription="TimeofDay"
-            android:textSize="36sp"
-            android:textAlignment="center"
-            android:layout_above="@+id/linearLayout3"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="140dp"
-            android:layout_marginEnd="140dp"
-            android:layout_marginBottom="70dp" />
-
-    </LinearLayout>
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/VariableTextView"
+        android:textColor="@android:color/holo_red_dark"
+        android:contentDescription="TimeofDay"
+        android:textSize="36sp"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/Successful"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
