--- a/app/src/main/res/layout/content_intro.xml
+++ b/app/src/main/res/layout/content_intro.xml
@@ -97,31 +97,18 @@
         android:layout_marginTop="28dp" />
 
     <TextView
-        android:text="Successful"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Successful"
-        android:textColor="@android:color/white"
-        tools:text="Successful"
-        android:contentDescription="Four"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:text="A"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView8"
+        android:id="@+id/A"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textAlignment="center"
         android:layout_below="@+id/To"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="29dp" />
+        android:layout_marginTop="29dp"
+        tools:text="A" />
 
     <TextView
         android:text="TextView"
@@ -136,5 +123,20 @@
         android:layout_below="@+id/Successful"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Successful"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Successful"
+        android:textColor="@android:color/white"
+        tools:text="Successful"
+        android:contentDescription="Four"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_below="@+id/A"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="44dp" />
 
 </RelativeLayout>
