--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="myArray">
+    <string-array name="myArray_deadline">
         <item>string 1</item>
         <item>string 2</item>
         <item>string 3</item>
         <item>string 4</item>
         <item>string 5</item>
     </string-array>
-    <string-array name="myArray">
+    <string-array name="myArray_lost">
         <item>string 1</item>
         <item>string 2</item>
         <item>string 3</item>
         <item>string 4</item>
         <item>string 5</item>
     </string-array>
-    <string-array name="myArray">
+    <string-array name="myArray_workout">
         <item>string 1</item>
         <item>string 2</item>
         <item>string 3</item>
